--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "cors": "^2.8.6",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "cors": "^2.8.6"
   },
   "engines": {
     "node": "22.x"
