--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 BOT_TOKEN=__FILL_ME__
 HELIUS_API_KEY=__FILL_ME__
+# Optional: if omitted, server auto-builds RPC_URL from HELIUS_API_KEY
 RPC_URL=https://mainnet.helius-rpc.com/?api-key=__FILL_ME__
 POLL_INTERVAL_MS=30000
 PORT=3000
